# genai-template

./: README.md  agents.py  client.py  hybrid_query.py  opensearch_client.py  opensearch_neural_search.py  pyproject.toml  utils.py
agents/: main.py
cli/: main.py
langgraph_agents/: main.py  model.py  repl.py  tools.py
ollama/: chat_stream_with_history.py  tools.py
swarm_agents/: agents.py  function_calling.py  main.py
tests/: aggregations.py  main.py
