[project]
name = "azure-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity",
    "boto3",
    "langchain",
    "openai",
    "opensearch-py",
    "python-dotenv",
    "requests-aws4auth",
    "swarm",
]

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }
