[project]
name = "azure-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.19.0",
    "boto3>=1.35.63",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langgraph>=0.2.50",
    "openai>=1.54.4",
    "opensearch-py>=2.7.1",
    "python-dotenv>=1.0.1",
    "requests-aws4auth>=0.4.3",
    "swarm>=0.0.2",
]

[project.scripts]
langgraph = "langgraph_agents.main:main"
swarm = "swarm_agents.main:main"

[tool.uv.sources]
swarm = { git = "https://github.com/openai/swarm.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/azure_ai", "langgraph_agents", "swarm_agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
